tg-2508 dialogs de creacion se abren desde los cards de medicacion y estudios

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
@@ -14,13 +14,13 @@
 				<app-summary-card id="estudios" [header]="estudios"
 												[editable]="true"
 												[canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO']"
-												(openInNew)="openDialogNewstudies()">
+												(openInNew)="openDialogNewStudy()">
 					<app-no-data></app-no-data>
 				</app-summary-card>
 				<app-summary-card id="indicaciones-generales" [header]="indicaciones"
 																 [editable]="true"
 																 [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO']"
-																 (openInNew)="openDialogNewRecommendations()">
+																 (openInNew)="openDialogNewRecommendation()">
 					<app-no-data></app-no-data>
 				</app-summary-card>
 			</div>
