--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -47,7 +47,7 @@
 							<app-problemas [nuevaConsultaRef]="dialogRef"></app-problemas>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_ordenes_prescripciones" *ngIf=true>
+					<mat-tab id="tab_ordenes_prescripciones" *ngIf=false>
 						<ng-template mat-tab-label>
 							<mat-icon>content_paste</mat-icon>
 							<span>{{ 'ambulatoria.paciente.ordenes_prescripciones.TAB_LABEL' | translate | uppercase }}</span>
@@ -55,11 +55,8 @@
 						<ng-template matTabContent>
 							<button mat-flat-button color="primary" routerLink="./ordenes" fxFlexFill.xs>
 								<span class="uppercase">Ordenes</span>
-							</button>
-							<button mat-flat-button color="primary" (click)="openDialog()" fxFlexFill.xs>
-								<span class="uppercase">Agregar medicacion</span>
-							</button>		
-							<app-ordenes></app-ordenes>
+							</button>	
+							<app-ordenes [patientId]="patientId"></app-ordenes>
 						</ng-template>
 					</mat-tab>
 				</mat-tab-group>
