--- a/front-end/webapp/src/app/modules/presentation/components/filters-card/filters-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/filters-card/filters-card.component.html
@@ -14,7 +14,7 @@
 				<mat-spinner id="spinner" color="primary"></mat-spinner>
 			</div>
 
-			<div id="results" class="padding">
+			<div id="results" class="results-panel padding">
 				<ng-content select="[results]"></ng-content>
 			</div>
 		</div>
