--- a/front-end/webapp/src/app/modules/guardia/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/guardia/routes/home/home.component.scss
@@ -3,6 +3,17 @@
 	box-sizing: border-box;
 	border: 1px solid #A8A8A8;
 	padding: 16px 0;
+	cursor: pointer;
+	box-shadow: none;
+
+	&.mat-card.en-atencion {
+		background-color: #EDF1F7;
+
+		#state {
+			color: #009B68;
+		}
+	}
+;
 }
 
 .header-image {
@@ -15,6 +26,12 @@ mat-card-subtitle {
 }
 
 .mat-card-header .mat-card-title {
-	margin-bottom: 5px;
-	font-size: 2px;
+	margin-bottom: 8px;
+	font-size: 16px;
+}
+
+.triage-chip {
+	width: fit-content;
+	padding: 1.5px 8px;
+	border-radius: 5px;
 }
