tg-2508 mejora para la legibilidad de los modals que agregan y crean items de prescripciones

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
@@ -20,7 +20,7 @@
                 </mat-select>
             </mat-form-field>
             
-            <div class="margin-checkbox" *ngIf="data.canRecipe">
+            <div class="margin-checkbox" *ngIf="isMedication()">
                 <mat-checkbox formControlName="withRecipe">
                     <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.new_prescription_dialog.WITHOUT_RECIPE'"></span>
                 </mat-checkbox>
