tg-2594 popup confirmacion y descarga de receta/orden

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.scss
@@ -3,3 +3,12 @@
 div.spinner {
 	@include centered-spinner;
 }
+
+.icon {
+    font-size: 96px;
+    margin: 0;
+}
+
+.item-margin {
+    margin-bottom: 25px;
+}
