--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
@@ -1,5 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="space-between start">
-    <h1 mat-dialog-title>{{data.titleLabel | translate}}</h1>
+<div fxLayout="row" fxLayoutAlign="end">
     <button id="close-modal" mat-button color="warn" mat-icon-button aria-label="close" (click)="closeModal()">
         <mat-icon>close</mat-icon>
     </button>
@@ -9,8 +8,12 @@
 	<mat-spinner color="primary"></mat-spinner>
 </div>
 
-<mat-dialog-actions fxLayout="row" fxLayoutAlign="end start" *ngIf="!loading">
-    <button mat-flat-button color="primary" (click)="downloadPrescription()" fxFlexFill.xs>
-        <span class="uppercase">Descargar receta</span>
+<mat-dialog-actions fxLayout="column" fxLayoutAlign="start center" *ngIf="!loading">
+    <div class="icon">
+        <mat-icon [inline]="true" class="material-icons-outlined" color="primary">check_circle</mat-icon>
+    </div>
+    <h1 class="mat-headline item-margin">{{data.titleLabel | translate}}</h1>
+    <button class="item-margin" mat-flat-button color="primary" (click)="downloadPrescription()" fxFlexFill.xs>
+        <span class="uppercase">{{data.downloadButtonLabel | translate}}</span>
     </button>
 </mat-dialog-actions>
