tg-941 [P2] Fix al cargar datos antropométricos o signos vitales con valor "e" el botón agregar no anda

--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-vital-signs/add-vital-signs.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-vital-signs/add-vital-signs.component.html
@@ -103,7 +103,7 @@
 	<mat-dialog-actions align="end">
 		<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span>
 		</button>
-		<button *ngIf="this.form.valid" mat-raised-button color="primary" (click)="submit()">
+		<button *ngIf="this.form.valid && !formHasNoValues(this.form.value)" mat-raised-button color="primary" (click)="submit()">
 			<span [translate]="'buttons.UPDATE'"></span>
 		</button>
 	</mat-dialog-actions>
