--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-anthropometric/add-anthropometric.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-anthropometric/add-anthropometric.component.html
@@ -66,7 +66,7 @@
 	<mat-dialog-actions align="end">
 		<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span>
 		</button>
-		<button *ngIf="this.form.valid" mat-raised-button color="primary" (click)="submit()">
+		<button *ngIf="this.form.valid && !formHasNoValues(this.form.value)" mat-raised-button color="primary" (click)="submit()">
 			<span [translate]="'buttons.ADD'"></span>
 		</button>
 	</mat-dialog-actions>
