tg-2580 [FE] Pantalla de admision administrativa en nuevo episodio.

--- a/front-end/webapp/src/app/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/home/home.component.html
@@ -1,5 +1,6 @@
 <button mat-flat-button color="primary" (click)="goToMockup()">to mockups</button>
 
+<button mat-raised-button color="primary" (click)="goToAdmisionAdministrativa()">Admision Administrativa</button>
 <app-content width="full">
 	<section id="header" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 		<div>
