--- a/front-end/webapp/src/app/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/home/home.component.html
@@ -1,6 +1,4 @@
 <button mat-flat-button color="primary" (click)="goToMockup()">to mockups</button>
-
-<button mat-raised-button color="primary" (click)="goToAdmisionAdministrativa()">Admision Administrativa</button>
 <app-content width="full">
 	<section id="header" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
 		<div>
@@ -10,66 +8,75 @@
 
 	<section id="body">
 		<app-filters-card [cardTitle]="'guardia.home.episodes.TITLE'">
-			<div results fxLayout="column" fxLayoutGap="15px" class="results-container">
-				<mat-card [ngClass]="{ 'en-atencion' : episode.state.id === estadosEpisodio.EN_ATENCION }"
-						  class="episode-card"
-						  (click)="goToEpisode(episode.id)" *ngFor="let episode of episodes">
-					<div fxLayout="row" fxFlexAlign="center" style="padding: 0 15px">
+			<div results fxLayout="column" fxLayout="column" fxLayoutGap="7px" fxLayoutAlign="end end">
 
-						<div id="patient" fxFlex="40%" fxLayout="row">
-							<mat-card-header>
-								<img mat-card-avatar
-									 [src]="episode.patient?.person?.decodedPhoto$ | async"
-									 onerror="this.src='../../../../../assets/images/empty-profile.png'">
-								<mat-card-title>
-									<span *ngIf="!episode.patient else patientInfo">
-										{{ 'guardia.home.episodes.episode.patient.NO_INFO'| translate }}
+				<div>
+					<button mat-raised-button color="primary" (click)="goToAdmisionAdministrativa()" class="uppercase"
+						translate="guardia.home.episodes.NEW_EPISODE"></button>
+				</div>
+
+				<div style="width: 100%;" fxLayoutGap="15px" fxLayout="column">
+					<mat-card [ngClass]="{ 'en-atencion' : episode.state.id === estadosEpisodio.EN_ATENCION }"
+						class="episode-card" (click)="goToEpisode(episode.id)" *ngFor="let episode of episodes">
+						<div fxLayout="row" fxFlexAlign="center" style="padding: 0 15px">
+
+							<div id="patient" fxFlex="40%" fxLayout="row">
+								<mat-card-header>
+									<img mat-card-avatar [src]="episode.patient?.person?.decodedPhoto$ | async"
+										onerror="this.src='../../../../../assets/images/empty-profile.png'">
+									<mat-card-title>
+										<span *ngIf="!episode.patient else patientInfo">
+											{{ 'guardia.home.episodes.episode.patient.NO_INFO'| translate }}
+										</span>
+									</mat-card-title>
+									<mat-card-subtitle *ngIf="episode.patient?.id">
+										<span class="mat-small">
+											{{ 'guardia.home.episodes.episode.patient.ID'| translate }}
+											{{ episode.patient?.id }}
+										</span>
+									</mat-card-subtitle>
+								</mat-card-header>
+
+
+								<ng-template #patientInfo>
+									<span
+										*ngIf="(episode.patient?.typeId !== PACIENTE_TEMPORAL || episode.patient?.firstName || episode.patient?.lastName) else temporal">
+										{{ episode.patient?.person?.firstName }} {{ episode.patient?.person?.lastName }}
 									</span>
-								</mat-card-title>
-								<mat-card-subtitle *ngIf="episode.patient?.id">
-									<span class="mat-small">
-										{{ 'guardia.home.episodes.episode.patient.ID'| translate }}
-										 {{ episode.patient?.id }}
-									</span>
-								</mat-card-subtitle>
-							</mat-card-header>
+								</ng-template>
 
+								<ng-template #temporal>
+									<span>{{ 'guardia.home.episodes.episode.patient.TEMPORAL'| translate }}</span>
+								</ng-template>
+							</div>
 
-							<ng-template #patientInfo>
-								<span *ngIf="(episode.patient?.typeId !== PACIENTE_TEMPORAL || episode.patient?.firstName || episode.patient?.lastName) else temporal">
-									{{ episode.patient?.person?.firstName }} {{ episode.patient?.person?.lastName }}
-								</span>
-							</ng-template>
+							<div id="triage" fxFlex="25%" fxLayout="column">
+								<div class="triage-chip"
+									[ngStyle]="{'color':episode.triage.id === triages.AMARILLO_NIVEL_3 ? 'black' : 'white' }"
+									[style.background-color]="episode.triage.color">{{ episode.triage.description }}
+								</div>
+								<span class="mat-small">{{ episode.type.description }}</span>
+							</div>
 
-							<ng-template #temporal>
-								<span>{{ 'guardia.home.episodes.episode.patient.TEMPORAL'| translate }}</span>
-							</ng-template>
+							<div id="status" fxFlex="30%" fxLayout="column">
+								<span *ngIf="episode.state.id === estadosEpisodio.EN_ESPERA else enAtencion">
+									{{ episode.state.description }}: {{ episode.waitingTime }} min</span>
+								<span class="mat-small"> {{ episode.doctorsOffice.description }} </span>
+
+								<ng-template #enAtencion>
+									<span id="state">{{ episode.state.description | uppercase }}</span>
+								</ng-template>
+							</div>
+
+							<div id="actions" fxFlex="5%">
+								<button mat-icon-button>
+									<mat-icon>more_vert</mat-icon>
+								</button>
+							</div>
 						</div>
+					</mat-card>
+				</div>
 
-						<div id="triage" fxFlex="25%" fxLayout="column">
-							<div class="triage-chip"
-								 [ngStyle]="{'color':episode.triage.id === triages.AMARILLO_NIVEL_3 ? 'black' : 'white' }"
-								 [style.background-color]="episode.triage.color">{{ episode.triage.description }}</div>
-							<span class="mat-small">{{ episode.type.description }}</span>
-						</div>
-
-						<div id="status" fxFlex="30%" fxLayout="column">
-							<span *ngIf="episode.state.id === estadosEpisodio.EN_ESPERA else enAtencion">
-								{{ episode.state.description }}: {{ episode.waitingTime }} min</span>
-							<span class="mat-small"> {{ episode.doctorsOffice.description }} </span>
-
-							<ng-template #enAtencion>
-								<span id="state">{{ episode.state.description | uppercase }}</span>
-							</ng-template>
-						</div>
-
-						<div id="actions" fxFlex="5%">
-							<button mat-icon-button>
-								<mat-icon>more_vert</mat-icon>
-							</button>
-						</div>
-					</div>
-				</mat-card>
 			</div>
 		</app-filters-card>
 	</section>
